--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Qube8</title>
     <style>
-    @import url('https://fonts.googleapis.com/css?family=Montserrat:800');
+    @import url('https://fonts.googleapis.com/css?family=Raleway:400');
 
     html, body {
       height: 100%;
@@ -12,22 +12,38 @@
     }
 
     body {
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Raleway', sans-serif;
+      font-size: 25px;
+      line-height: 1.4em;
+      background: #3C3C3B;
+      color: #ffffff;
       text-align: center;
       display: flex;
       align-items: center;
       justify-content: center;
       flex-direction: column;
-      font-size: 6em;
     }
     h1 {
-      margin: 0;
-      line-height: 0.8em;
-      font-size: 1.65em;
+      margin: 0.4em 0 0 0;
+      font-size: 1em;
+    }
+    a {
+      color: #F8E71C;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
     }
     </style>
   </head>
   <body>
-    <h1>Qube8</h1>
+    <svg width="484" height="155" xmlns="http://www.w3.org/2000/svg">
+      <g fill="none" fill-rule="evenodd">
+        <path d="M125 92.1c0 18.1-6.2 33-18.6 45l12.4 14.9h-16l-6-7.4a62.5 62.5 0 0 1-34.3 9.8A61.3 61.3 0 0 1 .1 92.1a61.4 61.4 0 0 1 62.4-62.3c17.4 0 32.2 6.1 44.2 18A59.3 59.3 0 0 1 125 92zm-62.5 50a50 50 0 0 0 26.2-7.1l-28.8-34.6h15.9L98 127.2c9-9.4 13.4-21.1 13.4-35 0-14.3-4.6-26.2-13.9-35.7a47.2 47.2 0 0 0-35-14.2A47.9 47.9 0 0 0 13.2 92 47.7 47.7 0 0 0 62.5 142zm85.5-32V32h13.4v76.6c0 21.5 12 33 31.5 33 19.4 0 31.5-11.5 31.5-33V32h13.4v78c0 14-4.1 24.9-12.4 32.6a46.2 46.2 0 0 1-32.5 11.4 46.2 46.2 0 0 1-32.5-11.4A42.5 42.5 0 0 1 148 110zM309.7 152h-41.1V32.1h36.6a32 32 0 0 1 22.9 8.8c6.2 5.7 9.3 13 9.3 21.8 0 11.6-5.7 20.2-15.3 24.1a28.4 28.4 0 0 1 24 29.8c0 10.1-3.4 18.7-10.4 25.4a35.5 35.5 0 0 1-26 10zM282 44.5v37.7h22.4c11.1 0 19.6-8.1 19.6-19 0-10.8-8.3-18.7-19.5-18.7H282zm0 49.7v45.4h26.8c13.8 0 24-9.8 24-23 0-6.4-2.3-11.7-7-16a23.6 23.6 0 0 0-17.1-6.4H282zM439.4 152h-69V32.1h67.8v12.4h-54.4v38H435V95h-51v44.7h55.5V152z" fill="#ffffff"/>
+        <path d="M449.7 36.8c0-6.8 3.8-11.7 9-13.8a11 11 0 0 1-5.1-9.3c0-3.5 1.2-6.6 3.8-9.1C459.9 2 463 .7 466.5.7s6.6 1.3 9.2 3.9c2.5 2.5 3.8 5.6 3.8 9.1 0 3.8-1.8 7-5.1 9.3 5.1 2 8.9 7 8.9 13.8 0 4.5-1.7 8.3-5 11.5a16.3 16.3 0 0 1-11.8 4.8c-4.7 0-8.6-1.6-11.9-4.8-3.2-3.2-4.9-7-4.9-11.5zm11.6-17.7c2.8 3 7.6 3 10.5 0 2.8-3 2.8-7.9 0-10.8-3-3-7.7-3-10.5 0a7.8 7.8 0 0 0 0 10.8zm-2.7 10c-2.2 2-3.2 4.7-3.2 7.7s1 5.6 3.2 7.8c2.2 2 4.8 3.2 8 3.2 3 0 5.6-1.1 7.8-3.2 2.2-2.2 3.3-4.8 3.3-7.8s-1.1-5.6-3.3-7.7a10.7 10.7 0 0 0-7.9-3.2 11 11 0 0 0-8 3.2z" fill="#F8E71C"/>
+      </g>
+    </svg>
+    <h1>Leaders in Startup, Enterprise<br/>& Investor Eco-Sytems</h1>
+    <a href="mailto:admin@qube8.io">admin@qube8.io</a>
   </body>
 </html>
