Updated font to match logo more closely

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Qube8</title>
     <style>
-    @import url('https://fonts.googleapis.com/css?family=Raleway:400');
+    @import url('https://fonts.googleapis.com/css?family=Cantarell:400');
 
     html, body {
       height: 100%;
@@ -12,7 +12,7 @@
     }
 
     body {
-      font-family: 'Raleway', sans-serif;
+      font-family: 'Cantarell', sans-serif;
       font-size: 25px;
       line-height: 1.4em;
       background: #3C3C3B;
