--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <path d="M449.7 36.8c0-6.8 3.8-11.7 9-13.8a11 11 0 0 1-5.1-9.3c0-3.5 1.2-6.6 3.8-9.1C459.9 2 463 .7 466.5.7s6.6 1.3 9.2 3.9c2.5 2.5 3.8 5.6 3.8 9.1 0 3.8-1.8 7-5.1 9.3 5.1 2 8.9 7 8.9 13.8 0 4.5-1.7 8.3-5 11.5a16.3 16.3 0 0 1-11.8 4.8c-4.7 0-8.6-1.6-11.9-4.8-3.2-3.2-4.9-7-4.9-11.5zm11.6-17.7c2.8 3 7.6 3 10.5 0 2.8-3 2.8-7.9 0-10.8-3-3-7.7-3-10.5 0a7.8 7.8 0 0 0 0 10.8zm-2.7 10c-2.2 2-3.2 4.7-3.2 7.7s1 5.6 3.2 7.8c2.2 2 4.8 3.2 8 3.2 3 0 5.6-1.1 7.8-3.2 2.2-2.2 3.3-4.8 3.3-7.8s-1.1-5.6-3.3-7.7a10.7 10.7 0 0 0-7.9-3.2 11 11 0 0 0-8 3.2z" fill="#F8E71C"/>
       </g>
     </svg>
-    <h1>Leaders in Startup, Enterprise<br/>& Investor Eco-Sytems</h1>
+    <h1>Leaders in Startup, Enterprise<br/>& Investor Ecosystems</h1>
     <a href="mailto:admin@qube8.io">admin@qube8.io</a>
   </body>
 </html>
